// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`normalized monte carlo parity snapshots > matches legacy Monte Carlo params for goals-and-life-events 1`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 119002.18863311788,
  "annualSavings": [
    22572,
    1250.1199999999953,
    40459.155,
    44458.81835000003,
    60800.325212000054,
    62967.783397840074,
    65209.31261250988,
    67527.3685031955,
    62614.06898575972,
    64903.10588934935,
    67209.41331811757,
    69487.46961122515,
    71845.6575915662,
    84516.63355774173,
    72713.34660025261,
    71793.63821071378,
    70826.14378760863,
    69809.41703879408,
    67346.36990577841,
    67904.498028527,
    66839.10355913194,
  ],
  "currentAge": 37,
  "deterministicAccumulation": false,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 210000,
  "lifeExpectancy": 93,
  "portfolioAdjustments": [
    {
      "amount": 49612.5,
      "year": 2,
    },
    {
      "amount": -18000,
      "year": 5,
    },
    {
      "amount": -39362.59973403797,
      "year": 11,
    },
    {
      "amount": -40346.66472738891,
      "year": 12,
    },
    {
      "amount": -41355.33134557363,
      "year": 13,
    },
    {
      "amount": -42389.21462921297,
      "year": 14,
    },
    {
      "amount": -25000,
      "year": 24,
    },
  ],
  "postRetirementIncome": [
    0,
    0,
    0,
    0,
    0,
    0,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
  ],
  "retirementAge": 58,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "withdrawalBasis": "expenses",
  "yearlyWeights": undefined,
}
`;

exports[`normalized monte carlo parity snapshots > matches legacy Monte Carlo params for pr-residency-transition 1`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 105771.55445738134,
  "annualSavings": [
    52404.5,
    46884.31818181818,
    43072.686363636356,
    44173.17279545458,
    49704.46689625003,
    50568.272960201764,
    51329.260090348616,
    52097.05623214472,
    61370.34031058232,
    66273.95757058664,
  ],
  "currentAge": 57,
  "deterministicAccumulation": false,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 557000,
  "lifeExpectancy": 92,
  "portfolioAdjustments": [],
  "postRetirementIncome": [
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
  ],
  "retirementAge": 67,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "withdrawalBasis": "expenses",
  "yearlyWeights": undefined,
}
`;

exports[`normalized monte carlo parity snapshots > matches legacy Monte Carlo params for property-and-CPF 1`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 126380.38370090838,
  "annualSavings": [
    125646,
    130149.75,
    134824.21124999996,
    139675.68564374998,
    144710.70381628122,
    148376.4306141974,
    153708.11884238955,
    159241.28286248588,
    164982.36849717426,
    170890.7035409836,
    177021.87667748638,
    183384.08839908108,
    189972.99256990585,
    196765.49860905466,
    203813.49489205354,
    212126.36739074969,
    221183.83552211444,
    228792.38236007636,
    236687.00195223413,
    244788.05997314997,
  ],
  "currentAge": 40,
  "deterministicAccumulation": false,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 742000,
  "lifeExpectancy": 95,
  "portfolioAdjustments": [
    {
      "amount": 1067800,
      "year": 25,
    },
  ],
  "postRetirementIncome": [
    54709.9644311437,
    55717.71354192228,
    133953.43257606612,
    135012.19898557788,
    156785.54223239198,
    157897.9086913853,
    159038.0843118534,
    160206.76432283322,
    161404.66133408755,
    162632.50577062322,
    163891.0463180723,
    165181.0503792076,
    89300.52834627545,
    90655.8388630057,
    92045.03214265424,
    93468.95525429396,
    94928.4764437247,
    96424.48566289121,
    97957.89511253685,
    99529.63979842365,
    101140.67810145763,
    102791.99236206745,
    104484.58947919251,
    106219.50152424572,
    107997.78637042525,
    109820.52833775926,
    111688.8388542766,
    113603.85713370692,
    115566.75087012295,
    117578.71694994942,
    119640.98218177151,
    121754.8040443892,
    123921.4714535723,
    126142.30554798499,
    35088.10767706454,
  ],
  "retirementAge": 60,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "withdrawalBasis": "expenses",
  "yearlyWeights": undefined,
}
`;

exports[`normalized monte carlo parity snapshots > matches legacy Monte Carlo params for salary-only 1`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 91838.77086283134,
  "annualSavings": [
    45008,
    48111.20000000002,
    51208.94600000002,
    54378.39509000002,
    57692.74542485006,
    61158.2461363753,
    64781.407648724846,
    68569.0124132407,
    72528.12607980147,
    76584.48968623538,
    80681.18472294867,
    84963.29044736213,
    89438.76185913953,
    94115.88562223503,
    99003.29366807266,
    103944.74112737871,
    109032.97650735761,
    114349.7244459077,
    119904.75002395624,
    125703.39364891253,
    131669.558022967,
    137901.94568768603,
    144411.89499258884,
    152161.2150566227,
    160866.0494822297,
    168222.90436673092,
    175905.23396924243,
    183895.31158885895,
  ],
  "currentAge": 32,
  "deterministicAccumulation": false,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 125000,
  "lifeExpectancy": 92,
  "portfolioAdjustments": [],
  "postRetirementIncome": [
    0,
    0,
    0,
    0,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
  ],
  "retirementAge": 60,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "withdrawalBasis": "expenses",
  "yearlyWeights": undefined,
}
`;
